<resources>
    <string name="app_name">YaTODO</string>
    <string name="todo_label">Todo List</string>
    <string name="tasks_done">Done</string>
    <string name="info_button">Info button</string>
    <string name="importance_indicator">Importance indicator</string>
    <string name="add_new">New task</string>
    <string name="save">Save</string>
    <string name="task_description_hing">Should do something…</string>
    <string name="importance">Importance</string>
    <string name="importance_none">None</string>
    <string name="importance_low">Low</string>
    <string name="importance_high">High</string>
    <string name="do_before">Do before</string>
    <string name="delete">Delete</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>