<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/back_primary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/close_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/close"
        android:tint="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:outlineSpotShadowColor="@android:color/transparent"
        android:outlineAmbientShadowColor="@android:color/transparent"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save_button"
        app:layout_constraintTop_toTopOf="@id/close_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="14sp"
        android:lineHeight="24dp"
        style="@style/TextAppearance.AppCompat.Button"
        />
    <EditText
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:lineHeight="18dp"
        android:background="@drawable/list_background"
        android:minLines="7"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@id/close_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/task_description_hing"
        android:autofillHints="" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/importance_text"
        app:layout_constraintTop_toBottomOf="@id/task_description"
        android:text="@string/importance"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="28dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:lineHeight="18.75dp"
        />
    <TextView
        android:id="@+id/popup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/importance_none"
        app:layout_constraintTop_toBottomOf="@id/importance_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:textColor="@color/label"
        android:alpha=".3"
        />
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/date_importance_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:dividerColor="@color/separator"
        android:alpha=".2"
        app:layout_constraintTop_toBottomOf="@id/popup_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deadline_text"
        app:layout_constraintTop_toBottomOf="@id/date_importance_divider"
        android:text="@string/do_before"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:lineHeight="18.75dp"
        />
    <TextView
        android:id="@+id/datepicker_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/deadline_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:textColor="@color/blue"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/toggle_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_importance_divider" />
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/date_delete_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:dividerColor="@color/separator"
        android:alpha=".2"
        app:layout_constraintTop_toBottomOf="@id/datepicker_indicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/date_delete_divider"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/red"
            android:contentDescription="@string/delete" />
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/delete_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:lineHeight="20dp"
            android:layout_marginStart="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>